# quilltap-v5

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  rust-toolchain.toml
.claude/commands/: commit.md
crates/quilltap-core/: Cargo.toml  build.rs
crates/quilltap-core/src/: about_character.rs  all_llm_pause.rs  canon.rs  canonicalize.rs  char_count.rs  chat_predicates.rs  chat_tasks.rs  chat_utils.rs  cheap_model.rs  clock.rs  collation.rs  context_budget.rs  context_compression.rs  context_summary.rs  dbkey.rs  embedding_blob.rs  embedding_vector.rs  enclave_budget.rs  format_bytes.rs  format_tokens.rs  jsnum.rs  jsstr.rs  lib.rs  literal_boost.rs  markdown.rs  memory_format.rs  memory_gate.rs  memory_weighting.rs  mentioned_characters.rs  message_attribution.rs  model_classes.rs  model_context.rs  participant_filters.rs  pricing.rs  pronoun_gender.rs  recall_history.rs  recall_tags.rs  scenario_text.rs  select_speaker.rs  semver.rs  (+7 more)
crates/quilltap-core/src/db/: background_jobs.rs  character_plugin_data.rs  character_vault.rs  characters.rs  characters_read.rs  chat_documents.rs  chat_settings.rs  chats.rs  chats_impersonation.rs  chats_messages.rs  chats_messages_read.rs  chats_outfits.rs  chats_participants.rs  chats_read.rs  chats_search.rs  chats_tokens.rs  connection_profiles.rs  conversation_annotations.rs  conversation_chunks.rs  doc_mount_blobs.rs  doc_mount_chunks.rs  doc_mount_documents.rs  doc_mount_file_links.rs  doc_mount_files.rs  doc_mount_folders.rs  doc_mount_points.rs  document_store_overlay.rs  embedding_profiles.rs  embedding_status.rs  ensure_official_store.rs  files.rs  folders.rs  group_character_members.rs  group_doc_mount_links.rs  groups.rs  help_docs.rs  image_profiles.rs  llm_logs.rs  memories.rs  memories_read.rs  (+23 more)
crates/quilltap-core/src/model/: embedding.rs  mod.rs
crates/quilltap-core/src/services/: housekeeping.rs  memory_gate.rs  memory_service.rs  mod.rs
crates/quilltap-fixture-sanitizer/: Cargo.toml
crates/quilltap-fixture-sanitizer/src/: lib.rs  main.rs
crates/quilltap-harness/: Cargo.toml
crates/quilltap-harness/src/: lib.rs
crates/quilltap-harness/tests/: about_character_matchers_equivalence.rs  background_jobs_tier2_equivalence.rs  canon_scenario_equivalence.rs  canonicalize_equivalence.rs  character_plugin_data_tier2_equivalence.rs  character_plugin_data_upsert_tier2_equivalence.rs  characters_adopt_tier2_equivalence.rs  characters_arrays_tier2_equivalence.rs  characters_create_tier2_equivalence.rs  characters_physical_tier2_equivalence.rs  characters_provision_tier2_equivalence.rs  characters_read_equivalence.rs  characters_scaffold_tier2_equivalence.rs  characters_slim_tier2_equivalence.rs  characters_update_tier2_equivalence.rs  chat_documents_tier2_equivalence.rs  chat_settings_tier2_equivalence.rs  chat_tasks_equivalence.rs  chats_impersonation_tier2_equivalence.rs  chats_messages_ops_tier2_equivalence.rs  chats_messages_read_equivalence.rs  chats_messages_tier2_equivalence.rs  chats_outfits_tier2_equivalence.rs  chats_participants_tier2_equivalence.rs  chats_read_equivalence.rs  chats_search_equivalence.rs  chats_tier2_equivalence.rs  chats_tokens_tier2_equivalence.rs  cheap_model_equivalence.rs  connection_profiles_tier2_equivalence.rs  context_budget_equivalence.rs  context_compression_equivalence.rs  context_summary_equivalence.rs  conversation_annotations_tier2_equivalence.rs  conversation_annotations_upsert_tier2_equivalence.rs  conversation_chunks_tier2_equivalence.rs  doc_mount_blobs_tier2_equivalence.rs  doc_mount_chunks_tier2_equivalence.rs  doc_mount_documents_tier2_equivalence.rs  doc_mount_file_links_tier2_equivalence.rs  (+75 more)
crates/quilltap-sqlite3mc-sys/: Cargo.toml  build.rs
crates/quilltap-sqlite3mc-sys/src/: lib.rs
crates/sqlcipher-probe/: Cargo.toml
crates/sqlcipher-probe/src/: main.rs
crates/sqlite3mc-probe/: Cargo.toml  build.rs
crates/sqlite3mc-probe/src/: main.rs
docs/: CHANGELOG.md
docs/developer/porting/: api-boundary.md  document-store-overlay.md  lantern-image-moderation-contract.md  overview.md  phase-0.md  phase-2-onramp.md  phase-3.md  provider-manifest.md  scriptorium-file-manager.md
docs/v4/: BACKUP-RESTORE.md  CHANGELOG.md  CHANGELOG_V0.md  CHANGELOG_V1.md  CHANGELOG_V2.md  CHANGELOG_V3.md  CHANGELOG_V4.md  DEPLOYMENT.md  TEMPLATES.md  WINDOWS.md
docs/v4/developer/: API.md  BACKGROUND_JOBS_CHILD.md  CLI.md  DATABASE_ABSTRACTION.md  DATABASE_ENCRYPTION.md  DDL.md  DEAD-CODE-REPORT.md  DEVELOPMENT.md  FILE-SYSTEM-IMPLEMENTATION.md  ICON_INVENTORY.md  IMAGE_GENERATION.md  PLUGIN_INITIALIZATION.md  PLUGIN_MANIFEST.md  PROMPT_ARCHITECTURE.md  PROVIDER_PLUGIN_DEVELOPMENT.md  SEARCH_PLUGIN_DEVELOPMENT.md  SYSTEM_FLOWCHARTS.md  SYSTEM_PROMPT_PLUGIN_DEVELOPMENT.md  TEMPLATE_PLUGIN_DEVELOPMENT.md  TESTING_GUIDE.md  THEME_PLUGIN_DEVELOPMENT.md  TOOL_PLUGIN_DEVELOPMENT.md
docs/v4/releases/: 1.5.md  1.6.md  1.7.md  2.0.md  2.1.md  2.10.0.md  2.10.1.md  2.10.2.md  2.11.0.md  2.2.0.md  2.2.1.md  2.3.0.md  2.4.0.md  2.4.1.md  2.5.0.md  2.5.1.md  2.6.0.md  2.6.1.md  2.7.0.md  2.8.0.md  2.8.1.md  2.9.0.md  3.0.0.md  3.1.0.md  3.1.1.md  3.1.2.md  3.2.0.md  3.2.1.md  3.3.0.md  4.0.0.md  4.0.1.md  4.1.0.md  4.2.0.md  4.2.1.md  4.2.2.md  4.3.0.md  4.3.1.md  4.4.0.md  4.5.0.md  4.5.1.md  (+3 more)
harness/oracle/: package.json
harness/oracle/cases/: about-character-matchers.ts  background-jobs.ts  canon-scenario.ts  canonicalize.ts  character-plugin-data-tier2.ts  character-plugin-data-upsert-tier2.ts  characters-adopt.ts  characters-arrays.ts  characters-create.ts  characters-physical.ts  characters-provision.ts  characters-read.ts  characters-scaffold.ts  characters-slim.ts  characters-update.ts  chat-documents-tier2.ts  chat-settings-tier2.ts  chat-tasks.ts  chats-impersonation-tier2.ts  chats-messages-ops-tier2.ts  chats-messages-read.ts  chats-messages-tier2.ts  chats-outfits-tier2.ts  chats-participants-tier2.ts  chats-read.ts  chats-search.ts  chats-tier2.ts  chats-tokens-tier2.ts  cheap-model.ts  connection-profiles-tier2.ts  context-budget.ts  context-compression.ts  context-summary.ts  (+82 more)
(+229 files in other folders)
