[workspace]
resolver = "2"
members = [
    "crates/*",
]

# Workspace root. Members: quilltap-core (the portable engine — pure-function
# ports plus the cipher-correct DB layer), quilltap-harness (the differential
# tests), and quilltap-fixture-sanitizer (the real-snapshot sanitizer tool).
# quilltap-cli / quilltap-tauri join as they're scaffolded.

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Charles Sebold"]

# Shared dependency versions live here so every crate pins the same ones.
# (Members opt in with `foo = { workspace = true }`.) Add as the port grows.
#
# rusqlite WITHOUT a bundled feature: quilltap-core's build.rs compiles the
# SQLite3MultipleCiphers amalgamation (sqleet/ChaCha20 default) and links it as
# `sqlite3`, so every consumer binds the correct cipher. `buildtime_bindgen`
# regenerates bindings against that header so versions can't drift.
# Do NOT add `bundled-sqlcipher*` — that is AES-only and returns NotADatabase on
# every real Quilltap database (the retired sqlcipher-probe proved this).
[workspace.dependencies]
rusqlite = { version = "0.37", default-features = false, features = ["buildtime_bindgen"] }
