[package]
name = "quilltap-core"
version = "0.0.61"
edition = "2021"
publish = false

# The portable engine. First real module: `dbkey` — reads and decrypts the
# `quilltap.dbkey` file exactly as lib/startup/dbkey.ts does, yielding the
# base64 pepper that keys every database. This is permanent code, not probe
# scratch: the production core derives the key this way at startup.
#
# TWO DIFFERENT CIPHERS — do not conflate them:
#   * The `.dbkey` FILE wraps the pepper with AES-256-GCM (the aes-gcm deps
#     below). Verified correct against Friday in Phase 0.
#   * The DATABASES themselves are encrypted with ChaCha20-Poly1305 (sqleet),
#     the DEFAULT cipher of better-sqlite3-multiple-ciphers — NOT SQLCipher,
#     despite every "sqlcipher" name in the v4 codebase. Confirmed via
#     `PRAGMA cipher` → "chacha20" on the real instance (2026-06-27).

[dependencies]
# DB cipher: SQLite3MultipleCiphers 2.3.5 (sqleet/ChaCha20 default), linked via
# the amalgamation compiled by the `quilltap-sqlite3mc-sys` crate (its pinned
# version keeps that 12 MB C compile cached across our version bumps). VERIFIED
# 2026-06-27: opened Friday (37 tables, 33 chars, 20320 memories) cipher=chacha20.
# Do NOT use rusqlite's bundled-sqlcipher (AES-only → NotADatabase on real DBs).
# The `db` module is the first consumer; `dbkey` itself needs no SQLite.
rusqlite = { workspace = true }
# Link-only: pulls the cipher-correct sqlite3 into the link (see the crate). Kept
# in the graph by `use quilltap_sqlite3mc_sys as _;` in lib.rs.
quilltap-sqlite3mc-sys = { path = "../quilltap-sqlite3mc-sys" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex engine for the ported name-matching / detail-extraction heuristics.
# Used only where v4 uses a RegExp; JS-vs-Rust fidelity is handled per call site
# (ASCII `\b`/`\d`/`\s` via `(?-u:...)`, Unicode `\p{L}\p{N}` boundaries checked
# explicitly, no backtracking/lookaround needed). Already in the lock tree.
regex = "1"

# Crypto for the .dbkey FILE wrapper only, matching lib/startup/pepper-crypto.ts:
#   AES-256-GCM cipher, PBKDF2-HMAC-<digest> key derivation.
aes-gcm = "0.10"          # AES-256-GCM (AEAD)
aes = "0.8"               # Aes256 block cipher, for the custom 16-byte-nonce GCM type
pbkdf2 = "0.12"           # PBKDF2
sha2 = "0.10"             # SHA-256 / SHA-512 (digest + pepper hash)
hmac = "0.12"             # HMAC for PBKDF2
hex = "0.4"               # hex <-> bytes for the .dbkey fields

# v4 UUIDs: repo `_create` mints ids via `crypto.randomUUID()` (RFC-4122 v4)
# when not pinned. The non-sync create path uses this; sync/fixtures pin the id.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
