[package]
name = "quilltap-fixture-sanitizer"
version = "0.0.1"
edition = "2021"
publish = false

# The real-snapshot fixture sanitizer (Phase-2 on-ramp, Deliverable B).
#
# Takes a COPY of a real instance, decrypts it with the real pepper (recovered
# from the copy's `.dbkey` via `quilltap-core::dbkey`, held in memory ONLY —
# never printed, logged, or written), deterministically scrubs every free-text /
# BLOB column while preserving structural shape (row counts, the FK graph, id
# relationships, enum/flag distributions, timestamps, the document-store
# content<->sha invariant), and re-encrypts the result under the committed
# THROWAWAY test pepper. The output is keyed with the test pepper only; no
# `.dbkey` is ever written and the real pepper never touches disk.
#
# SAFETY: operate on a COPY only. The binary refuses a source path that looks
# like a live instance. Per the user's decision (2026-07-01), no Friday-derived
# data is committed — the committed test is synthetic; real snapshots are
# regenerated locally on demand (they need the real instance + pepper anyway).

[dependencies]
# dbkey (pepper recovery) + the ported read repos used by `--verify`, and the
# canonical `sha256OfString` for the document-store content<->sha recompute.
quilltap-core = { path = "../quilltap-core" }
# Link-only: pulls the cipher-correct sqlite3 (ChaCha20/sqleet) into this bin's
# link, exactly as quilltap-core does. Kept in the graph by `use ... as _;`.
quilltap-sqlite3mc-sys = { path = "../quilltap-sqlite3mc-sys" }
rusqlite = { workspace = true }
# preserve_order so a deep-scrubbed JSON column re-serializes in the original
# key order (matching the rest of the workspace / v4's insertion-order JSON).
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
