[package]
name = "sqlcipher-probe"
version = "0.0.0"
edition = "2021"
publish = false

# Phase-0 P4 probe. Proves the hardest dependency compiles, reports the
# bundled SQLCipher version/cipher defaults, and now — via quilltap-core's
# dbkey module — opens a REAL instance by reading and decrypting
# quilltap.dbkey itself. No pepper ever touches an env var or a file.

[dependencies]
rusqlite = { workspace = true }
quilltap-core = { path = "../quilltap-core" }
