[package]
name = "sqlite3mc-probe"
version = "0.0.0"
edition = "2021"
publish = false
build = "build.rs"

# Phase-0 probe #2. Proves the CORRECT cipher library — SQLite3MultipleCiphers
# (sqleet/ChaCha20 default) — opens a real Quilltap database, where probe #1's
# stock SQLCipher (rusqlite bundled-sqlcipher) failed with NotADatabase.
#
# Strategy: compile the SQLite3MC *amalgamation* (a single sqlite3mc_amalgamation.c
# that is a drop-in replacement for sqlite3.c) directly via the `cc` crate in
# build.rs, then link rusqlite against it instead of letting rusqlite bundle
# stock SQLite. We pin SQLite3MC 2.3.x to match the version the installed
# better-sqlite3-multiple-ciphers@12.11.1 bundles (SQLite3 Multiple Ciphers
# 2.3.5, on SQLite 3.46.x).

[dependencies]
quilltap-core = { path = "../quilltap-core" }

# rusqlite WITHOUT any bundled feature: we provide the C library ourselves and
# tell libsqlite3-sys to link it (SQLITE3_LIB_DIR / link search from build.rs).
# buildtime_bindgen regenerates bindings against OUR header so versions can't
# drift from what we actually link.
rusqlite = { version = "0.37", default-features = false, features = ["buildtime_bindgen"] }

[build-dependencies]
cc = "1"
